[package]
name = "pdf-oxide-nodejs"
version = "0.3.2"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16", features = ["napi4"] }
napi-derive = "2.16"
pdf_oxide = { path = ".." }
tokio = { version = "1", features = ["rt", "macros"] }

[build-dependencies]
napi-build = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
